Sooo many tweaks, fixes, etc.